# topological_signatures_of_reso_20260216_185244_a4fdb302

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_search_results/: arxiv_extra_results.json  arxiv_results.json  arxiv_targeted_results.json  curated_papers.json  papers_to_download.json  semantic_scholar_results.json
papers/: README.md
papers/pages/: 2012.13255_intrinsic_dimensionality_finetuning_manifest.txt  2203.15556_chinchilla_compute_optimal_manifest.txt  2208.06438_tda_nn_layer_representations_manifest.txt  2509.23024_representation_geometry_lm_manifest.txt
results/data/: all_results.json  config.json  pythia-160m_results.json  pythia-410m_results.json  pythia-70m_results.json  statistics.json
src/: analyze_results.py  extract_embeddings.py  run_experiments.py
